--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <title>Kërkim sipas Kodit | Google Sheets</title>
     <style>
-        * { box-sizing: border-box; }
+        * {
+            box-sizing: border-box;
+        }
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
             margin: 0;
             min-height: 100vh;
             display: flex;
-            align-items: flex-start;
+            align-items: center;
             justify-content: center;
             background: linear-gradient(135deg, #0f172a, #1e293b, #0f766e);
             color: #e5e7eb;
-            padding-top: 40px;
         }
         .app {
             background: rgba(15, 23, 42, 0.9);
@@ -25,30 +26,23 @@
             box-shadow:
                 0 20px 40px rgba(0,0,0,0.45),
                 0 0 0 1px rgba(148,163,184,0.2);
-            position: relative;
         }
-
-        /* LOGO E RE – QENDËR SIPËR */
-        .logo-top {
-            width: 90px;
-            height: auto;
-            display: block;
-            margin: 0 auto 16px auto;
+        .header {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 10px;
         }
-
         .header-text h1 {
             margin: 0;
-            font-size: 20px;
+            font-size: 18px;
             font-weight: 600;
-            text-align: center;
         }
         .header-text p {
-            margin: 4px 0 18px 0;
+            margin: 2px 0 0;
             font-size: 12px;
             color: #9ca3af;
-            text-align: center;
         }
-
         .icon-circle {
             width: 34px;
             height: 34px;
@@ -60,9 +54,8 @@
             box-shadow: 0 0 0 1px rgba(15,23,42,0.8);
             font-weight: 700;
             font-size: 18px;
-            margin: 0 auto 14px auto;
+            margin-bottom: 6px;
         }
-
         .search-row {
             display: flex;
             gap: 8px;
@@ -78,6 +71,10 @@
             outline: none;
             font-size: 14px;
         }
+        .search-row input:focus {
+            border-color: #22d3ee;
+            box-shadow: 0 0 0 1px rgba(34,211,238,0.3);
+        }
         .search-row button {
             border-radius: 10px;
             border: none;
@@ -87,16 +84,26 @@
             cursor: pointer;
             background: linear-gradient(135deg, #22c55e, #16a34a);
             color: white;
+            white-space: nowrap;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
         }
-
-        .hint { text-align:center; margin-top:6px; font-size:11px; color:#9ca3af; }
-
-        #result { margin-top:18px; }
-
+        .search-row button:hover {
+            filter: brightness(1.07);
+        }
+        .hint {
+            margin-top: 6px;
+            font-size: 11px;
+            color: #9ca3af;
+        }
+        #result {
+            margin-top: 18px;
+        }
         .card {
             background: rgba(15,23,42,0.9);
             border-radius: 14px;
-            padding: 14px;
+            padding: 14px 14px 10px;
             border: 1px solid rgba(55,65,81,0.9);
             box-shadow: 0 10px 25px rgba(0,0,0,0.35);
         }
@@ -104,8 +111,12 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            margin-bottom: 8px;
         }
-        .card-title { font-size:14px; font-weight:600; }
+        .card-title {
+            font-size: 14px;
+            font-weight: 600;
+        }
         .card-tag {
             font-size: 11px;
             padding: 3px 8px;
@@ -114,16 +125,42 @@
             color: #bbf7d0;
             border: 1px solid rgba(34,197,94,0.3);
         }
-
         .card-main {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1.1fr 1.1fr;
             gap: 8px 16px;
-            margin-top: 10px;
+            font-size: 12px;
         }
-        .field-label { color:#9ca3af; font-size:11px; }
-        .field-value { font-size:13px; font-weight:500; color:#e5e7eb; }
-
+        .field-label {
+            font-size: 11px;
+            color: #9ca3af;
+        }
+        .field-value {
+            font-size: 13px;
+            font-weight: 500;
+            color: #e5e7eb;
+        }
+        .table-wrap {
+            margin-top: 12px;
+            max-height: 240px;
+            overflow: auto;
+        }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            font-size: 11px;
+        }
+        th, td {
+            border: 1px solid #374151;
+            padding: 5px 6px;
+            text-align: left;
+        }
+        th {
+            background-color: #111827;
+            position: sticky;
+            top: 0;
+            z-index: 1;
+        }
         .actions {
             margin-top: 15px;
             display: flex;
@@ -131,38 +168,283 @@
         }
         .btn-print {
             padding: 8px 14px;
+            border: none;
             border-radius: 8px;
             background: #0ea5e9;
             color: white;
             cursor: pointer;
-            border:none;
-            font-size:13px;
+            font-size: 13px;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
         }
         .btn-reset {
             padding: 8px 14px;
+            border: none;
             border-radius: 8px;
             background: #ef4444;
-            color:white;
+            color: white;
             cursor: pointer;
-            border:none;
-            font-size:13px;
+            font-size: 13px;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+        }
+        .btn-print:hover {
+            filter: brightness(1.07);
+        }
+        .btn-reset:hover {
+            filter: brightness(1.08);
+        }
+        .error {
+            margin-top: 10px;
+            color: #fecaca;
+            background: rgba(127,29,29,0.6);
+            border-radius: 10px;
+            padding: 8px 10px;
+            font-size: 12px;
+            border: 1px solid rgba(248,113,113,0.5);
+        }
+        .loading {
+            margin-top: 10px;
+            font-size: 12px;
+            color: #93c5fd;
+        }
+        .no-print {
+            /* do nothing here; used only in @media print */
         }
 
-        @media print {
-            body { background:white !important; }
+        @media (max-width: 540px) {
             .app {
-                background:white !important;
-                box-shadow:none !important;
-                color:black;
+                margin: 16px;
+                padding: 18px 16px;
             }
-            .no-print { display:none !important; }
-            .card { background:white !important; }
+            .card-main {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        /* Stil për printim – të dalë pastër */
+        @media print {
+            body {
+                background: #ffffff !important;
+            }
+            .app {
+                box-shadow: none !important;
+                background: #ffffff !important;
+                color: #000000 !important;
+                max-width: 100%;
+                border-radius: 0;
+                padding: 10px 10px 0;
+            }
+            .no-print {
+                display: none !important;
+            }
+            .card {
+                background: #ffffff !important;
+                border-color: #00000033;
+                box-shadow: none !important;
+            }
+            table, th, td {
+                border-color: #00000055;
+            }
         }
     </style>
 </head>
 <body>
 
 <div class="app">
+    <!-- Header me logon e Republikës së Kosovës -->
+    <div class="header">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Coat_of_arms_of_Kosovo.svg"
+             alt="Kosova"
+             style="width:48px; height:48px; margin-right:4px;">
+        <div class="header-text">
+            <h1>Republika e Kosovës</h1>
+            <p>Sistem kërkimi sipas kodit nga lista e regjistrit</p>
+        </div>
+    </div>
 
-    <!-- LOGO E RE E VENDOSUR NË QENDËR SIPËR -->
-    <img class="logo-top" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoAAAAGQCAYAAABAx7AnAAAABmJLR0QA/wD/AP+gvaeTAAAgAElEQVR4nOzdWZBcV3nn+21u
+    <div class="icon-circle no-print">ID</div>
+
+    <!-- Zona e kërkimit -->
+    <div class="search-row no-print">
+        <input
+            type="text"
+            id="idInput"
+            placeholder="Shkruaj kodin p.sh. 10000120"
+            autocomplete="off"
+        >
+        <button id="searchBtn">
+            🔍 Kërko
+        </button>
+    </div>
+    <div class="hint no-print">
+        Shtyp Enter ose “Kërko” pasi të shkruash kodin (kolona B në Google Sheets).
+    </div>
+
+    <div id="result"></div>
+</div>
+
+<script>
+    // Linku i publikuar CSV nga Google Sheets (që më dërgove)
+    const CSV_URL =
+        "https://docs.google.com/spreadsheets/d/e/2PACX-1vQAT9gEX9Tz6N5XYh1BKcvooQF4o7DeoJGFTv1jywjpubYQJmzJc9ZpTFt3JvDdAXZjDsXweWI6cxuh/pub?output=csv";
+
+    // Kolona B = indeksi 1 (A=0, B=1, C=2...)
+    const ID_COLUMN_INDEX = 1;
+
+    let sheetData = [];
+    let header = [];
+
+    async function loadData() {
+        const resultDiv = document.getElementById("result");
+        resultDiv.innerHTML = "<div class='loading'>Duke lexuar të dhënat nga Google Sheets...</div>";
+
+        const response = await fetch(CSV_URL);
+        if (!response.ok) {
+            throw new Error("Nuk u lexua Google Sheet. Kontrollo që linku CSV hapet normalisht në browser.");
+        }
+
+        const text = await response.text();
+
+        const rows = text.split(/\r?\n/).filter(r => r.trim() !== "");
+        sheetData = rows.map(row => row.split(","));
+        header = sheetData[0];
+        resultDiv.innerHTML = "";
+    }
+
+    function findById(id) {
+        id = id.trim();
+        for (let i = 1; i < sheetData.length; i++) {
+            if (sheetData[i][ID_COLUMN_INDEX] === id) {
+                return sheetData[i];
+            }
+        }
+        return null;
+    }
+
+    function display(row) {
+        const div = document.getElementById("result");
+        div.innerHTML = "";
+
+        if (!row) {
+            div.innerHTML =
+                "<div class='error'>Nuk u gjet asnjë rresht për këtë kod. Kontrollo saktësinë e kodit në kolonën B.</div>";
+            return;
+        }
+
+        // Supozim sipas fotos: A = nr, B = kod, C = emër, D = mbiemër, E/F/G fusha të tjera
+        const nr = row[0] ?? "";
+        const kod = row[1] ?? "";
+        const emer = row[2] ?? "";
+        const mbiemer = row[3] ?? "";
+        const njesia = row[4] ?? "";
+        const fusha5 = row[5] ?? "";
+        const fusha6 = row[6] ?? "";
+
+        let html = `<div class="card">
+            <div class="card-header">
+                <div class="card-title">Rezultati për kodin: <strong>${kod}</strong></div>
+                <div class="card-tag">Gjetur</div>
+            </div>
+            <div class="card-main">
+                <div>
+                    <div class="field-label">Emri</div>
+                    <div class="field-value">${emer || "-"}</div>
+                </div>
+                <div>
+                    <div class="field-label">Mbiemri</div>
+                    <div class="field-value">${mbiemer || "-"}</div>
+                </div>
+                <div>
+                    <div class="field-label">Nr rendor (A)</div>
+                    <div class="field-value">${nr || "-"}</div>
+                </div>
+                <div>
+                    <div class="field-label">Njësia / Vlera (E)</div>
+                    <div class="field-value">${njesia || "-"}</div>
+                </div>
+                <div>
+                    <div class="field-label">Fusha F</div>
+                    <div class="field-value">${fusha5 || "-"}</div>
+                </div>
+                <div>
+                    <div class="field-label">Fusha G</div>
+                    <div class="field-value">${fusha6 || "-"}</div>
+                </div>
+            </div>
+            <div class="table-wrap">
+                <table>
+                    <thead>
+                        <tr>`;
+
+        for (let i = 0; i < header.length; i++) {
+            html += `<th>${header[i] ?? ("Kolona " + (i + 1))}</th>`;
+        }
+
+        html += `        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>`;
+
+        for (let i = 0; i < header.length; i++) {
+            html += `<td>${row[i] ?? ""}</td>`;
+        }
+
+        html += `       </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="actions no-print">
+                <button class="btn-print" onclick="window.print()">
+                    🖨️ Print
+                </button>
+                <button class="btn-reset" onclick="resetSearch()">
+                    ↩️ Kthehu te kërkimi
+                </button>
+            </div>
+        </div>`;
+
+        div.innerHTML = html;
+    }
+
+    async function handleSearch() {
+        const id = document.getElementById("idInput").value;
+        const resultDiv = document.getElementById("result");
+
+        if (!id.trim()) {
+            resultDiv.innerHTML =
+                "<div class='error'>Shkruaj një kod së pari.</div>";
+            return;
+        }
+
+        try {
+            if (sheetData.length === 0) {
+                await loadData();
+            }
+        } catch (e) {
+            resultDiv.innerHTML = `<div class='error'>${e.message}</div>`;
+            return;
+        }
+
+        const row = findById(id);
+        display(row);
+    }
+
+    function resetSearch() {
+        document.getElementById("idInput").value = "";
+        document.getElementById("result").innerHTML = "";
+        document.getElementById("idInput").focus();
+    }
+
+    document.getElementById("searchBtn").addEventListener("click", handleSearch);
+    document.getElementById("idInput").addEventListener("keydown", (e) => {
+        if (e.key === "Enter") {
+            handleSearch();
+        }
+    });
+</script>
+
+</body>
+</html>
