--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
   // ===== LOGIN KONFIG =====
   // Ndryshoji këto 2 rreshta
   const LOGIN_USER = "admin";
-  const LOGIN_PASS = "12345";
+  const LOGIN_PASS = "3d!buk!";
 
   const SESSION_KEY = "app_logged_in_v1";
   const SESSION_USER = "app_user_v1";
@@ -521,3 +521,4 @@
 
 </body>
 </html>
+
