--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   </div>
 
   <div class="header">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/1f/Coat_of_arms_of_Kosovo.svg"
+    <img src="https://www.kuvendikosoves.org/Content/images/icons/header-logo.svg"
          alt="Kosova"
          style="width:48px; height:48px; margin-right:4px;">
     <div class="header-text">
@@ -521,4 +521,5 @@
 
 </body>
 </html>
+
 
