--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@ a<!DOCTYPE html>
 <html lang="sq">
 <head>
   <meta charset="UTF-8">
-  <title>Kërkim me Login | Google Sheets</title>
+  <title> Kërkim me Login | Te Gjitha skemat </title>
   <style>
     * { box-sizing: border-box; }
     body {
@@ -288,7 +288,7 @@ a<!DOCTYPE html>
     <input
       type="text"
       id="idInput"
-      placeholder="Shkruaj numrin e letërnjoftimit p.sh. 1000021799"
+      placeholder="Shkruaj numrin e letërnjoftimit p.sh. 1234567890"
       autocomplete="off"
     >
     <button id="searchBtn">🔍 Kërko</button>
@@ -521,6 +521,7 @@ a<!DOCTYPE html>
 
 </body>
 </html>
+
 
 
 
